# python-project-50

./: README.md  main.py  pyproject.toml
gendiff/scripts/: gendiff.py
